@@ -60,9 +60,18 @@ task statementTest(type: Test) {
       '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED'
 }
 
+task catalogTest(type: Test) {
+  filter {
+    includeTestsMatching 'com.linkedin.openhouse.spark.catalogtest.*'
+  }
+  jvmArgs \
+      '--add-exports=java.base/sun.nio.ch=ALL-UNNAMED'
+}
+
 test {
   filter {
     excludeTestsMatching 'com.linkedin.openhouse.spark.statementtest.*'
+    excludeTestsMatching 'com.linkedin.openhouse.spark.catalogtest.*'
   }
   jvmArgs \
       '--add-opens=java.base/java.nio=ALL-UNNAMED',
@@ -72,3 +81,4 @@ test {
 }
 
 test.dependsOn statementTest
+statementTest.dependsOn catalogTest
